# tf-challenge-iris

./: .gitignore  NoteBook Inicial.ipynb  README.md  img_metadata.csv  img_metadata_test.csv  img_metadata_train_dev.csv  pyproject.toml  requirements.txt  setup.py
iris/: data.py  metrics.py  train_loop.py  trainer.py  utils.py
iris/models/: baseline.py  timm_models.py
notebooks/: AVE-Data-augmentation.ipynb  AVE-LanMarkDataset.ipynb  AVE-labels.ipynb  AVE-weight sampler.ipynb  Superponer Imagenes.ipynb  baseline_transfer.ipynb  timm_transfer.ipynb  transfer_guide-1.ipynb
