[tool.poetry]
name = "iris"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
torch = "^1.10.0"
torchvision = "^0.11.1"
pathlib = "^1.0.1"
pandas = "^1.3.4"
numpy = "^1.21.4"
albumentations = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
